// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initHandlerRunner should work with rejecting handler 1`] = `
Object {
  "handlerCalls": Array [
    Array [
      Object {
        "test": "test",
      },
    ],
  ],
  "logCalls": Array [
    Array [
      "info",
      "parameters",
      Object {
        "test": "test",
      },
    ],
  ],
  "result": undefined,
}
`;

exports[`initHandlerRunner should work with resolving handler 1`] = `
Object {
  "handlerCalls": Array [
    Array [
      Object {
        "test": "test",
      },
    ],
  ],
  "logCalls": Array [
    Array [
      "info",
      "parameters",
      Object {
        "test": "test",
      },
    ],
    Array [
      "info",
      "response",
      undefined,
    ],
  ],
  "result": undefined,
}
`;
